[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apple-ble"
version = "0.1.1"
description = "Pure-Python parser for Apple Continuity BLE proximity-pairing adverts (AirPods battery + Apple device presence)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hudson Brendon", email = "contato.hudsonbrendon@gmail.com" }]
keywords = ["airpods", "ble", "bluetooth", "apple", "continuity", "home-assistant"]
dependencies = []

[project.optional-dependencies]
cli = ["bleak>=0.22"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
apple-ble = "apple_ble.scanner:main"

[project.urls]
Homepage = "https://github.com/hudsonbrendon/apple-ble"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_ble"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
